[project]
name = "sehat-link"
version = "0.1.0"
description = "AI powered healthcare system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.0.2",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "passlib>=1.7.4",
    "sqlmodel>=0.0.27",
    "psycopg2-binary>=2.9.11",
    "uvicorn[standard]>=0.38.0",
    "fastapi>=0.121.0",
    "supabase>=2.23.2",
    "langgraph>=1.0.2",
    "langchain>=1.0.3",
    "pinecone[asyncio]>=7.3.0",
    "langchain-google-genai>=3.0.1",
    "structlog>=25.5.0",
    "python-jose>=3.5.0",
    "filetype==1.2.0",
    "google-ai-generativelanguage==0.9.0",
    "google-api-core==2.28.1",
    "google-auth==2.42.1",
    "googleapis-common-protos==1.71.0",
    "grpcio==1.76.0",
    "grpcio-status==1.76.0",
    "langchain-google-genai==3.0.1",
    "lz4==4.4.5",
    "proto-plus==1.26.1",
    "protobuf==6.33.0",
    "protoc-gen-openapiv2==0.0.1",
    "pyasn1-modules==0.4.2",
    "structlog==25.5.0",
    "openai>=2.7.2",
    "redis<7.0",
    "langgraph-checkpoint-redis>=0.1.2",
    "langgraph-swarm>=0.0.2",
    "langchain-mcp-adapters>=0.1.13",
    "bcrypt>=5.0.0",
    "googlemaps>=4.10.0",
    "ollama>=0.6.1",
    "langsmith>=0.4.42",
    "httpx>=0.28.1",
    "googlemaps>=4.10.0",
]
